Initial foundation built with a login and the capacity to create an account, though the feature to create an account needs to be done in the Frontend.

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -10,6 +10,8 @@
   },
   "rules": {
     "no-console": "off",
+    "spaced-comment": "off",
+    "class-methods-use-this": "off",
     "no-restricted-syntax": [
       "error",
       {
