--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,7 +1,13 @@
-APP_PORT=5000
-FRONTEND_URL=http://localhost:3000
+APP_PORT=8000
+FRONTEND_URL=http://localhost:5173
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=notroot
 DB_PASSWORD=helloworld
-DB_NAME=mvc_express
+DB_NAME=synthscribe_db
+
+JWT_SECRET=
+# GENERATE A SECRET KEY HERE https://www.grc.com/passwords.htm
+JWT_EXPIRESIN=1h
+JWT_SECURE=false
+JWT_COOKIE_MAXAGE=3600000
