--- a/backend/package.json
+++ b/backend/package.json
@@ -7,18 +7,27 @@
     "fix": "prettier --write . && eslint --fix --ext .js ."
   },
   "dependencies": {
+    "@node-rs/argon2": "^1.5.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.0.1"
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
+    "multer": "1.4.5-lts.1",
+    "mysql2": "^3.5.0",
+    "nodemailer": "^6.9.3",
+    "sharp": "^0.32.1",
+    "socket.io": "^4.7.1",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
-    "eslint": "^8.32.0",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.20",
-    "prettier": "2.8.3"
+    "eslint-plugin-prettier": "5.0.0-alpha.2",
+    "nodemon": "^2.0.22",
+    "prettier": "3.0.0"
   }
 }
