--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,23 +7,29 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "joi": "^17.9.2",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
+    "sass": "^1.63.6",
+    "socket.io-client": "^4.7.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^3.0.1",
-    "eslint": "^8.32.0",
+    "@vitejs/plugin-react": "^4.0.2",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-import-resolver-custom-alias": "^1.3.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-custom-alias": "^1.3.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-prettier": "5.0.0-alpha.2",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "prettier": "^2.8.3",
-    "vite": "^4.0.4"
+    "prettier": "^3.0.0",
+    "vite": "^4.4.2"
   }
 }
